k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: niffler-test-frontend
  namespace: niffler-test
spec:
  selector:
    app: niffler-test-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
