k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: niffler-test-frontend
  namespace: niffler-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: niffler-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: niffler-test-frontend
                port:
                  number: 80
